--- a/hackathon_automation/models/bits_map/model.config
+++ b/hackathon_automation/models/bits_map/model.config
@@ -4,8 +4,8 @@
   <version>1.0</version>
   <sdf version="1.6">model.sdf</sdf>
   <author>
-    <name>Vimarsh</name>
-    <email>f20221060@goa.bits-pilani.ac.in</email>
+    <name>ERC</name>
+    <email>erc</email>
   </author>
   <description>
     BITS Goa complete map for Gazebo simulation
